[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt_divider"
version = "0.1.0"
description = "This project will help with dividing receipts into smaller chunks, which can be shared with other people in order to create a payment request"
readme = "README.rst"
authors = [
  {name = "Sayf el Kaddouri", email = "sayfgmaul@gmail.com"}
]
maintainers = [
  {name = "Sayf el Kaddouri", email = "sayfgmaul@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/imnublet/receipt_divider/issues"
changelog = "https://github.com/imnublet/receipt_divider/blob/master/changelog.md"
homepage = "https://github.com/imnublet/receipt_divider"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

